# newFlowv2

./: Dockerfile  README.md  image_optical_flow.py  inference_video.py  pyproject.toml
optical-flow-measure/: README.md  pyproject.toml  shell.nix
optical-flow-measure/agents/: OpticalFlowAgent.json
optical-flow-measure/src/optical-flow-measure/capabilities/: optical_flow_measure.py
